Can scan PDFs and determine what files they came from

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-.env/
-embeddings/chroma-collections.parquet
-embeddings/chroma-embeddings.parquet
-embeddings/index/id_to_uuid_bf4d03cb-de8c-488a-903c-eeec10a93b92.pkl
-embeddings/index/index_bf4d03cb-de8c-488a-903c-eeec10a93b92.bin
-embeddings/index/index_metadata_bf4d03cb-de8c-488a-903c-eeec10a93b92.pkl
-embeddings/index/uuid_to_id_bf4d03cb-de8c-488a-903c-eeec10a93b92.pkl
-
 .env
+embeddings/
+
