--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.5",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
